--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
   "private": true,
   "scripts": {
     "test": "cross-env --SILENT=true npm run build:dist",
-    "start": "npm run extract:locale && npm run compile:locale && npm run imageHook && cross-env NODE_ENV=development --VARIANT=local webpack-dev-server --config ./config/webpack.config.js",
-    "start:dist": "npm run extract:locale && npm run compile:locale && npm run imageHook && cross-env NODE_ENV=production --VARIANT=local webpack-dev-server --config ./config/webpack.config.js && http-server ./dist -o",
+    "start": "npm run extract:locale && npm run compile:locale && npm run imageHook && cross-env NODE_ENV=development BABEL_ENV=web --VARIANT=local webpack-dev-server --config ./config/webpack.config.js",
+    "start:dist": "npm run extract:locale && npm run compile:locale && npm run imageHook && cross-env NODE_ENV=production BABEL_ENV=web --VARIANT=local webpack-dev-server --config ./config/webpack.config.js && http-server ./dist -o",
     "setup": "npm i",
     "lint:js": "./node_modules/.bin/eslint \"src/**/*.js\"",
     "lint:styles": "stylelint \"src/**/*.css\"",
-    "build:dist": "npm run extract:locale && npm run compile:locale && npm run imageHook && cross-env NODE_ENV=production --VARIANT=local webpack --config ./config/webpack.config.js",
-    "build:dist:local": "npm run extract:locale && npm run compile:locale && npm run imageHook && cross-env NODE_ENV=production --VARIANT=local webpack --config ./config/webpack.config.js",
-    "build:dist:dev-live": "npm run extract:locale && npm run compile:locale && npm run imageHook && cross-env NODE_ENV=production --VARIANT=dev-live webpack --config ./config/webpack.config.js && gulp buildDev",
-    "build:dist:live": "npm run extract:locale && npm run compile:locale && npm run imageHook && cross-env NODE_ENV=production --VARIANT=live webpack --config ./config/webpack.config.js && gulp buildLive",
-    "analyse": "npm run extract:locale && npm run compile:locale && npm run imageHook && cross-env NODE_ENV=production --VARIANT=local webpack --config ./config/webpack.config.js --profile --json > dist/stats.json && webpack-bundle-analyzer dist/stats.json",
+    "build:dist": "npm run extract:locale && npm run compile:locale && npm run imageHook && cross-env NODE_ENV=production BABEL_ENV=web --VARIANT=local webpack --config ./config/webpack.config.js",
+    "build:dist:local": "npm run extract:locale && npm run compile:locale && npm run imageHook && cross-env NODE_ENV=production BABEL_ENV=web --VARIANT=local webpack --config ./config/webpack.config.js",
+    "build:dist:dev-live": "npm run extract:locale && npm run compile:locale && npm run imageHook && cross-env NODE_ENV=production BABEL_ENV=web --VARIANT=dev-live webpack --config ./config/webpack.config.js && gulp buildDev",
+    "build:dist:live": "npm run extract:locale && npm run compile:locale && npm run imageHook && cross-env NODE_ENV=production BABEL_ENV=web --VARIANT=live webpack --config ./config/webpack.config.js && gulp buildLive",
+    "analyse": "npm run extract:locale && npm run compile:locale && npm run imageHook && cross-env NODE_ENV=production BABEL_ENV=web --VARIANT=local webpack --config ./config/webpack.config.js --profile --json > dist/stats.json && webpack-bundle-analyzer dist/stats.json",
     "generateWebp": "node ./config/webpConverter.js",
     "resizeImages": "node ./config/imageResizer.js",
     "preimageHook": "npm run generateWebp",
@@ -23,14 +23,31 @@
     "start:app": "react-native start",
     "test:app": "jest",
     "lint": "eslint .",
-    "extract:locale": "formatjs extract \"src/web/**/*.js*\" --out-file src/locales/en.json --id-interpolation-pattern \"[sha512:contenthash:base64:6]\"",
-    "compile:locale": "formatjs compile-folder --ast src/locales src/compiled-locales"
+    "extract:locale": "formatjs extract \"src/**/*.js*\" --ignore=\"src/{locales,compiled-locales}/**\" --out-file src/locales/en.json --id-interpolation-pattern \"[sha512:contenthash:base64:6]\"",
+    "compile:locale": "formatjs compile-folder --ast src/locales src/compiled-locales",
+    "gen:devEnv": "cross-env NODE_ENV=development node ./genEnv.js",
+    "gen:prodEnv": "cross-env NODE_ENV=production node ./genEnv.js",
+    "android:dev:start": "npm run extract:locale && npm run compile:locale && npm run gen:devEnv && cross-env BABEL_ENV=app react-native start",
+    "android:prod:start": "npm run extract:locale && npm run compile:locale && npm run gen:prodEnv && cross-env BABEL_ENV=app react-native start",
+    "android:dev": "npm run extract:locale && npm run compile:locale && npm run gen:devEnv && cross-env BABEL_ENV=app react-native run-android",
+    "android:prod": "npm run extract:locale && npm run compile:locale && npm run gen:prodEnv && cross-env BABEL_ENV=app react-native run-android --variant=release",
+    "android:cp:dev": "npm run extract:locale && npm run compile:locale && npm run gen:devEnv && appcenter codepush release-react -a johnpk/guviApp -d Staging",
+    "android:cp:prod": "npm run extract:locale && npm run compile:locale && npm run gen:prodEnv && appcenter codepush release-react -a johnpk/guviApp -d Production",
+    "android:prod:bundle": "npm run extract:locale && npm run compile:locale && npm run gen:prodEnv && cd android && cross-env BABEL_ENV=app ./gradlew bundleRelease",
+    "ios:dev": "npm run extract:locale && npm run compile:locale && npm run gen:devEnv && cross-env BABEL_ENV=app react-native run-ios",
+    "ios:prod": "npm run extract:locale && npm run compile:locale && npm run gen:prodEnv && cross-env BABEL_ENV=app react-native run-ios --variant=release"
   },
   "dependencies": {
     "@babel/polyfill": "^7.11.5",
     "@babel/runtime": "^7.11.2",
+    "@formatjs/intl-datetimeformat": "^5.0.0",
+    "@formatjs/intl-getcanonicallocales": "^1.9.0",
+    "@formatjs/intl-locale": "^2.4.45",
+    "@formatjs/intl-numberformat": "^7.4.2",
+    "@formatjs/intl-pluralrules": "^4.3.2",
     "@fortawesome/fontawesome-free": "^5.14.0",
     "@react-navigation/native": "^6.0.8",
+    "@react-navigation/native-stack": "^6.5.0",
     "ace-builds": "^1.4.12",
     "animejs": "^3.2.1",
     "autocrop-worker": "^1.0.4",
@@ -40,12 +57,15 @@
     "canvas-confetti": "^1.3.2",
     "crypto-js": "^4.0.0",
     "datatables.net-dt": "^1.10.22",
+    "envfile": "^6.17.0",
     "file-saver": "^2.0.2",
     "font-awesome": "^4.7.0",
     "html2canvas": "^1.0.0-rc.7",
+    "intl": "^1.2.5",
     "intl-tel-input": "^17.0.3",
     "jquery": "^3.5.1",
     "jquery-ui-bundle": "^1.12.1-migrate",
+    "jsc-android": "^250230.2.1",
     "list.js": "^1.5.0",
     "magic-snowflakes": "^4.1.6",
     "material-design-icons-iconfont": "^6.1.0",
@@ -57,6 +77,8 @@
     "react-dom": "^17.0.2",
     "react-intl": "^5.24.6",
     "react-native": "0.67.2",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "^3.11.1",
     "react-router-dom": "6",
     "sass": "^1.30.0",
     "shepherd.js": "^8.1.0",
