color system implemented

--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "private": true,
   "scripts": {
     "test": "cross-env --SILENT=true npm run build:dist",
-    "start": "npm run extract:locale && npm run compile:locale && npm run imageHook && cross-env NODE_ENV=development BABEL_ENV=web --VARIANT=local webpack-dev-server --config ./config/webpack.config.js",
-    "start:dist": "npm run extract:locale && npm run compile:locale && npm run imageHook && cross-env NODE_ENV=production BABEL_ENV=web --VARIANT=local webpack-dev-server --config ./config/webpack.config.js && http-server ./dist -o",
+    "start": "npm run extract:locale && npm run compile:locale && npm run gen:devEnv && npm run imageHook && cross-env NODE_ENV=development BABEL_ENV=web --VARIANT=local webpack-dev-server --config ./config/webpack.config.js",
+    "start:dist": "npm run extract:locale && npm run compile:locale && npm run gen:prodEnv && npm run imageHook && cross-env NODE_ENV=production BABEL_ENV=web --VARIANT=local webpack-dev-server --config ./config/webpack.config.js && http-server ./dist -o",
     "setup": "npm i",
     "lint:js": "./node_modules/.bin/eslint \"src/**/*.js\"",
     "lint:styles": "stylelint \"src/**/*.css\"",
-    "build:dist": "npm run extract:locale && npm run compile:locale && npm run imageHook && cross-env NODE_ENV=production BABEL_ENV=web --VARIANT=local webpack --config ./config/webpack.config.js",
-    "build:dist:local": "npm run extract:locale && npm run compile:locale && npm run imageHook && cross-env NODE_ENV=production BABEL_ENV=web --VARIANT=local webpack --config ./config/webpack.config.js",
-    "build:dist:dev-live": "npm run extract:locale && npm run compile:locale && npm run imageHook && cross-env NODE_ENV=production BABEL_ENV=web --VARIANT=dev-live webpack --config ./config/webpack.config.js && gulp buildDev",
-    "build:dist:live": "npm run extract:locale && npm run compile:locale && npm run imageHook && cross-env NODE_ENV=production BABEL_ENV=web --VARIANT=live webpack --config ./config/webpack.config.js && gulp buildLive",
+    "build:dist": "npm run extract:locale && npm run compile:locale && npm run gen:devEnv && npm run imageHook && cross-env NODE_ENV=production BABEL_ENV=web --VARIANT=local webpack --config ./config/webpack.config.js",
+    "build:dist:local": "npm run extract:locale && npm run compile:locale && npm run gen:prodEnv && npm run imageHook && cross-env NODE_ENV=production BABEL_ENV=web --VARIANT=local webpack --config ./config/webpack.config.js",
+    "build:dist:dev-live": "npm run extract:locale && npm run compile:locale && npm run gen:dev-live-Env && npm run imageHook && cross-env NODE_ENV=production BABEL_ENV=web --VARIANT=dev-live webpack --config ./config/webpack.config.js && gulp buildDev",
+    "build:dist:live": "npm run extract:locale && npm run compile:locale && npm run gen:prodEnv && npm run imageHook && cross-env NODE_ENV=production BABEL_ENV=web --VARIANT=live webpack --config ./config/webpack.config.js && gulp buildLive",
     "analyse": "npm run extract:locale && npm run compile:locale && npm run imageHook && cross-env NODE_ENV=production BABEL_ENV=web --VARIANT=local webpack --config ./config/webpack.config.js --profile --json > dist/stats.json && webpack-bundle-analyzer dist/stats.json",
     "generateWebp": "node ./config/webpConverter.js",
     "resizeImages": "node ./config/imageResizer.js",
@@ -27,6 +27,7 @@
     "compile:locale": "formatjs compile-folder --ast src/locales src/compiled-locales",
     "gen:devEnv": "cross-env NODE_ENV=development node ./genEnv.js",
     "gen:prodEnv": "cross-env NODE_ENV=production node ./genEnv.js",
+    "gen:dev-live-Env": "cross-env NODE_ENV=production --VARIANT=dev-live node ./genEnv.js",
     "android:dev:start": "npm run extract:locale && npm run compile:locale && npm run gen:devEnv && cross-env BABEL_ENV=app react-native start",
     "android:prod:start": "npm run extract:locale && npm run compile:locale && npm run gen:prodEnv && cross-env BABEL_ENV=app react-native start",
     "android:dev": "npm run extract:locale && npm run compile:locale && npm run gen:devEnv && cross-env BABEL_ENV=app react-native run-android",
@@ -46,11 +47,14 @@
     "@formatjs/intl-numberformat": "^7.4.2",
     "@formatjs/intl-pluralrules": "^4.3.2",
     "@fortawesome/fontawesome-free": "^5.14.0",
+    "@loadable/component": "^5.15.2",
+    "@react-native-async-storage/async-storage": "^1.16.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
     "ace-builds": "^1.4.12",
     "animejs": "^3.2.1",
     "autocrop-worker": "^1.0.4",
+    "axios": "^0.26.0",
     "blockly": "^3.20200625.2",
     "bootstrap": "^4.5.2",
     "bs-custom-file-input": "^1.3.4",
@@ -67,8 +71,9 @@
     "jquery-ui-bundle": "^1.12.1-migrate",
     "jsc-android": "^250230.2.1",
     "list.js": "^1.5.0",
-    "magic-snowflakes": "^4.1.6",
+    "magic-snowflakes": "^6.0.1",
     "material-design-icons-iconfont": "^6.1.0",
+    "node-sass-json-importer": "^4.3.0",
     "path-to-regexp": "^6.2.0",
     "phaser": "3.12.0",
     "phaser-animated-tiles": "^2.0.2",
@@ -98,7 +103,6 @@
     "@formatjs/cli": "^4.8.2",
     "@react-native-community/eslint-config": "^2.0.0",
     "autoprefixer": "^9.8.6",
-    "axios": "^0.21.1",
     "babel-core": "^6.26.3",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.1.0",
