--- a/package.json
+++ b/package.json
@@ -49,6 +49,10 @@
     "@fortawesome/fontawesome-free": "^5.14.0",
     "@loadable/component": "^5.15.2",
     "@react-native-async-storage/async-storage": "^1.16.1",
+    "@react-native-firebase/analytics": "^14.5.0",
+    "@react-native-firebase/app": "^14.5.0",
+    "@react-native-firebase/messaging": "^14.5.0",
+    "@react-navigation/material-top-tabs": "^6.1.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
     "ace-builds": "^1.4.12",
@@ -82,8 +86,10 @@
     "react-dom": "^17.0.2",
     "react-intl": "^5.24.6",
     "react-native": "0.67.2",
+    "react-native-pager-view": "^5.4.11",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.11.1",
+    "react-native-tab-view": "^3.1.1",
     "react-router-dom": "6",
     "sass": "^1.30.0",
     "shepherd.js": "^8.1.0",
