--- a/package.json
+++ b/package.json
@@ -86,10 +86,14 @@
     "react-dom": "^17.0.2",
     "react-intl": "^5.24.6",
     "react-native": "0.67.2",
+    "react-native-animatable": "^1.3.3",
+    "react-native-elements": "^3.4.2",
     "react-native-pager-view": "^5.4.11",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.11.1",
+    "react-native-svg": "^12.1.1",
     "react-native-tab-view": "^3.1.1",
+    "react-native-vector-icons": "^9.1.0",
     "react-router-dom": "6",
     "sass": "^1.30.0",
     "shepherd.js": "^8.1.0",
@@ -155,6 +159,7 @@
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
     "postcss-sass": "^0.4.4",
+    "react-native-svg-transformer": "^1.0.0",
     "react-test-renderer": "17.0.2",
     "readline-sync": "^1.4.10",
     "robotstxt-webpack-plugin": "^7.0.0",
