navbar fixed with efficient nested route, env changes made, dynamic page title, route home to dashboard changed, signin stylesheet linter error fixed

--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
   "private": true,
   "scripts": {
     "test": "cross-env --SILENT=true npm run build:dist",
-    "start": "npm run extract:locale && npm run compile:locale && npm run gen:devEnv && npm run imageHook && cross-env NODE_ENV=development BABEL_ENV=web --VARIANT=local webpack-dev-server --config ./config/webpack.config.js",
-    "start:dist": "npm run extract:locale && npm run compile:locale && npm run gen:prodEnv && npm run imageHook && cross-env NODE_ENV=production BABEL_ENV=web --VARIANT=local webpack-dev-server --config ./config/webpack.config.js && http-server ./dist -o",
+    "start": "npm run extract:locale && npm run compile:locale && npm run gen:devEnv && npm run imageHook && cross-env NODE_ENV=development BABEL_ENV=web --VARIANT=development webpack-dev-server --config ./config/webpack.config.js",
+    "start:dist": "npm run extract:locale && npm run compile:locale && npm run gen:prodEnv && npm run imageHook && cross-env NODE_ENV=production BABEL_ENV=web --VARIANT=development webpack-dev-server --config ./config/webpack.config.js && http-server ./dist -o",
     "setup": "npm i",
     "lint:js": "./node_modules/.bin/eslint \"src/**/*.js\"",
     "lint:styles": "stylelint \"src/**/*.css\"",
-    "build:dist": "npm run extract:locale && npm run compile:locale && npm run gen:devEnv && npm run imageHook && cross-env NODE_ENV=production BABEL_ENV=web --VARIANT=local webpack --config ./config/webpack.config.js",
-    "build:dist:local": "npm run extract:locale && npm run compile:locale && npm run gen:prodEnv && npm run imageHook && cross-env NODE_ENV=production BABEL_ENV=web --VARIANT=local webpack --config ./config/webpack.config.js",
+    "build:dist": "npm run extract:locale && npm run compile:locale && npm run gen:devEnv && npm run imageHook && cross-env NODE_ENV=production BABEL_ENV=web --VARIANT=development webpack --config ./config/webpack.config.js",
+    "build:dist:local": "npm run extract:locale && npm run compile:locale && npm run gen:prodEnv && npm run imageHook && cross-env NODE_ENV=production BABEL_ENV=web --VARIANT=development webpack --config ./config/webpack.config.js",
     "build:dist:dev-live": "npm run extract:locale && npm run compile:locale && npm run gen:dev-live-Env && npm run imageHook && cross-env NODE_ENV=production BABEL_ENV=web --VARIANT=dev-live webpack --config ./config/webpack.config.js && gulp buildDev",
-    "build:dist:live": "npm run extract:locale && npm run compile:locale && npm run gen:prodEnv && npm run imageHook && cross-env NODE_ENV=production BABEL_ENV=web --VARIANT=live webpack --config ./config/webpack.config.js && gulp buildLive",
-    "analyse": "npm run extract:locale && npm run compile:locale && npm run imageHook && cross-env NODE_ENV=production BABEL_ENV=web --VARIANT=local webpack --config ./config/webpack.config.js --profile --json > dist/stats.json && webpack-bundle-analyzer dist/stats.json",
+    "build:dist:live": "npm run extract:locale && npm run compile:locale && npm run gen:prodEnv && npm run imageHook && cross-env NODE_ENV=production BABEL_ENV=web --VARIANT=production webpack --config ./config/webpack.config.js && gulp buildLive",
+    "analyse": "npm run extract:locale && npm run compile:locale && npm run imageHook && cross-env NODE_ENV=production BABEL_ENV=web --VARIANT=development webpack --config ./config/webpack.config.js --profile --json > dist/stats.json && webpack-bundle-analyzer dist/stats.json",
     "generateWebp": "node ./config/webpConverter.js",
     "resizeImages": "node ./config/imageResizer.js",
     "preimageHook": "npm run generateWebp",
