--- a/package.json
+++ b/package.json
@@ -59,7 +59,6 @@
     "ace-builds": "^1.4.12",
     "animejs": "^3.2.1",
     "autocrop-worker": "^1.0.4",
-    "axios": "^0.26.0",
     "blockly": "^3.20200625.2",
     "bootstrap": "^4.5.2",
     "bs-custom-file-input": "^1.3.4",
@@ -89,6 +88,7 @@
     "react-native": "0.67.2",
     "react-native-animatable": "^1.3.3",
     "react-native-elements": "^3.4.2",
+    "react-native-image-picker": "^4.7.3",
     "react-native-pager-view": "^5.4.11",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.11.1",
