--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "react-native-image-picker": "^4.7.3",
     "react-native-pager-view": "^5.4.11",
     "react-native-phone-number-input": "^2.1.0",
+    "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.11.1",
     "react-native-svg": "^12.1.1",
@@ -100,7 +101,7 @@
     "sass": "^1.30.0",
     "shepherd.js": "^8.1.0",
     "steroid-router": "^1.0.4",
-    "swiper": "^6.1.2",
+    "swiper": "^8.0.7",
     "workerpool": "^6.0.3"
   },
   "devDependencies": {
