--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "@react-navigation/material-top-tabs": "^6.1.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
+    "@rneui/base": "^4.0.0-rc.1",
+    "@rneui/themed": "^4.0.0-rc.1",
     "@svgr/webpack": "^5.5.0",
     "ace-builds": "^1.4.12",
     "animejs": "^3.2.1",
