--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@react-native-firebase/analytics": "^14.5.0",
     "@react-native-firebase/app": "^14.5.0",
     "@react-native-firebase/messaging": "^14.5.0",
+    "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/material-top-tabs": "^6.1.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
