turtle output screen - partial

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -18,6 +18,8 @@ target 'hackerkid' do
 
   pod 'react-native-image-picker', :path => '../node_modules/react-native-image-picker'
 
+  pod 'react-native-webview', :path => '../node_modules/react-native-webview'
+
   target 'hackerkidTests' do
     inherit! :complete
     # Pods for testing
