--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@fortawesome/fontawesome-free": "^5.14.0",
     "@loadable/component": "^5.15.2",
     "@react-native-async-storage/async-storage": "^1.16.1",
+    "@react-native-community/netinfo": "^8.3.0",
     "@react-native-firebase/analytics": "^14.5.0",
     "@react-native-firebase/app": "^14.5.0",
     "@react-native-firebase/messaging": "^14.5.0",
