--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "react-native-elements": "^3.4.2",
     "react-native-image-picker": "^4.7.3",
     "react-native-pager-view": "^5.4.11",
+    "react-native-phone-number-input": "^2.1.0",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.11.1",
     "react-native-svg": "^12.1.1",
