--- a/package.json
+++ b/package.json
@@ -91,11 +91,13 @@
     "react-intl": "^5.24.6",
     "react-native": "0.67.2",
     "react-native-animatable": "^1.3.3",
+    "react-native-collapsible": "^1.6.0",
     "react-native-elements": "^3.4.2",
     "react-native-image-picker": "^4.7.3",
     "react-native-pager-view": "^5.4.11",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-raw-bottom-sheet": "^2.2.0",
+    "react-native-reanimated": "^2.9.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.11.1",
     "react-native-svg": "^12.1.1",
