--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "react-native-svg": "^12.1.1",
     "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^9.0.0",
+    "react-native-webview": "^11.23.0",
     "react-router-dom": "6",
     "sass": "^1.30.0",
     "shepherd.js": "^8.1.0",
