--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "react-native-animatable": "^1.3.3",
     "react-native-elements": "^3.4.2",
     "react-native-image-picker": "^4.7.3",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-pager-view": "^5.4.11",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-raw-bottom-sheet": "^2.2.0",
