--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "envfile": "^6.17.0",
     "file-saver": "^2.0.2",
     "font-awesome": "^4.7.0",
+    "hls.js": "^1.2.3",
     "html2canvas": "^1.4.1",
     "intl": "^1.2.5",
     "intl-tel-input": "^17.0.3",
@@ -86,6 +87,7 @@
     "path-to-regexp": "^6.2.0",
     "phaser": "3.12.0",
     "phaser-animated-tiles": "^2.0.2",
+    "plyr-react": "^5.1.0",
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
