added package json

--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "envfile": "^6.17.0",
     "file-saver": "^2.0.2",
     "font-awesome": "^4.7.0",
+    "fuzzy-search": "^3.2.1",
     "hls.js": "^1.2.3",
     "html2canvas": "^1.4.1",
     "intl": "^1.2.5",
@@ -98,6 +99,7 @@
     "react-native-elements": "^3.4.2",
     "react-native-image-picker": "^4.7.3",
     "react-native-linear-gradient": "^2.6.2",
+    "react-native-orientation": "^3.1.3",
     "react-native-pager-view": "^5.4.11",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-raw-bottom-sheet": "^2.2.0",
@@ -106,6 +108,7 @@
     "react-native-svg": "^12.1.1",
     "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^9.0.0",
+    "react-native-video": "^5.2.1",
     "react-native-webview": "^11.23.0",
     "react-router-dom": "6",
     "sass": "^1.30.0",
