--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "@rneui/base": "^4.0.0-rc.1",
     "@rneui/themed": "^4.0.0-rc.1",
     "@svgr/webpack": "^5.5.0",
-    "ace-builds": "^1.4.12",
+    "ace-builds": "^1.12.3",
     "animejs": "^3.2.1",
     "autocrop-worker": "^1.0.4",
     "blockly": "^3.20200625.2",
@@ -88,6 +88,7 @@
     "phaser-animated-tiles": "^2.0.2",
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
+    "react-ace": "^10.1.0",
     "react-dom": "^17.0.2",
     "react-intl": "^5.24.6",
     "react-native": "0.67.2",
