--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@loadable/component": "^5.15.2",
     "@react-native-async-storage/async-storage": "^1.16.1",
     "@react-native-clipboard/clipboard": "^1.10.0",
+    "@react-native-community/blur": "^4.2.0",
     "@react-native-community/netinfo": "^8.3.0",
     "@react-native-firebase/analytics": "^14.5.0",
     "@react-native-firebase/app": "^14.5.0",
