react native certificate finish

--- a/ios/hackerkid/Info.plist
+++ b/ios/hackerkid/Info.plist
@@ -117,6 +117,10 @@
 		<string>Octicons.ttf</string>
 		<string>SimpleLineIcons.ttf</string>
 		<string>Zocial.ttf</string>
+		<string>Courgette-Regular.ttf</string>
+		<string>DMSans-Regular.ttf</string>
+		<string>Courgette-Regular.woff</string>
+		<string>Courgette-Regular.woff2</string>
 	</array>
 </dict>
 </plist>
