--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@fortawesome/fontawesome-free": "^5.14.0",
     "@loadable/component": "^5.15.2",
     "@react-native-async-storage/async-storage": "^1.16.1",
+    "@react-native-camera-roll/camera-roll": "^5.1.0",
     "@react-native-clipboard/clipboard": "^1.10.0",
     "@react-native-community/netinfo": "^8.3.0",
     "@react-native-firebase/analytics": "^14.5.0",
@@ -93,6 +94,7 @@
     "react-intl": "^5.24.6",
     "react-native": "0.67.2",
     "react-native-animatable": "^1.3.3",
+    "react-native-dropdown-picker": "^5.4.3",
     "react-native-elements": "^3.4.2",
     "react-native-image-picker": "^4.7.3",
     "react-native-linear-gradient": "^2.6.2",
@@ -104,6 +106,7 @@
     "react-native-svg": "^12.1.1",
     "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^9.0.0",
+    "react-native-view-shot": "^3.5.0",
     "react-native-webview": "^11.23.0",
     "react-router-dom": "6",
     "sass": "^1.30.0",
