--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "@formatjs/intl-pluralrules": "^4.3.2",
     "@fortawesome/fontawesome-free": "^5.14.0",
     "@loadable/component": "^5.15.2",
-    "@react-native-async-storage/async-storage": "^1.17.10",
+    "@react-native-async-storage/async-storage": "1.17.10",
     "@react-native-clipboard/clipboard": "^1.10.0",
     "@react-native-community/netinfo": "^8.3.0",
     "@react-native-firebase/analytics": "^14.5.0",
