--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@formatjs/intl-pluralrules": "^4.3.2",
     "@fortawesome/fontawesome-free": "^5.14.0",
     "@loadable/component": "^5.15.2",
+    "@popperjs/core": "^2.11.6",
     "@react-native-async-storage/async-storage": "^1.16.1",
     "@react-native-camera-roll/camera-roll": "^5.1.0",
     "@react-native-clipboard/clipboard": "^1.10.0",
