local-live changes added, s3prefix added for login hook, charset utf-8 added, hk logo added, optimized some pages(memoized), data leak cleaned up in some components

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@formatjs/intl-pluralrules": "^4.3.2",
     "@fortawesome/fontawesome-free": "^5.14.0",
     "@loadable/component": "^5.15.2",
+    "@popperjs/core": "^2.11.6",
     "@react-native-async-storage/async-storage": "1.17.10",
     "@react-native-clipboard/clipboard": "^1.10.0",
     "@react-native-community/blur": "^4.2.0",
@@ -87,6 +88,7 @@
     "magic-snowflakes": "^6.0.1",
     "material-design-icons-iconfont": "^6.1.0",
     "moment": "^2.29.4",
+    "node-fetch": "^3.3.0",
     "node-sass-json-importer": "^4.3.0",
     "path-to-regexp": "^6.2.0",
     "phaser": "3.12.0",
@@ -113,8 +115,8 @@
     "react-native-svg": "^12.1.1",
     "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^9.0.0",
-    "react-native-view-shot": "^3.5.0",
     "react-native-video": "^5.2.1",
+    "react-native-view-shot": "^3.5.0",
     "react-native-webview": "^11.23.0",
     "react-router-dom": "6",
     "sass": "^1.30.0",
