--- a/package.json
+++ b/package.json
@@ -88,7 +88,6 @@
     "magic-snowflakes": "^6.0.1",
     "material-design-icons-iconfont": "^6.1.0",
     "moment": "^2.29.4",
-    "node-fetch": "^3.3.0",
     "node-sass-json-importer": "^4.3.0",
     "path-to-regexp": "^6.2.0",
     "phaser": "3.12.0",
@@ -123,8 +122,8 @@
     "shepherd.js": "^8.1.0",
     "steroid-router": "^1.0.4",
     "swiper": "^8.0.7",
-    "workerpool": "^6.0.3",
-    "timeme.js": "^2.1.0"
+    "timeme.js": "^2.1.0",
+    "workerpool": "^6.0.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.5",
