--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "magic-snowflakes": "^6.0.1",
     "material-design-icons-iconfont": "^6.1.0",
     "moment": "^2.29.4",
+    "node-fetch": "2.6.1",
     "node-sass-json-importer": "^4.3.0",
     "path-to-regexp": "^6.2.0",
     "phaser": "3.12.0",
