--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "path-to-regexp": "^6.2.0",
     "phaser": "3.12.0",
     "phaser-animated-tiles": "^2.0.2",
+    "plyr": "^3.7.3",
     "plyr-react": "^5.1.0",
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
@@ -113,8 +114,8 @@
     "react-native-svg": "^12.1.1",
     "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^9.0.0",
-    "react-native-view-shot": "^3.5.0",
     "react-native-video": "^5.2.1",
+    "react-native-view-shot": "^3.5.0",
     "react-native-webview": "^11.23.0",
     "react-router-dom": "6",
     "sass": "^1.30.0",
