--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@loadable/component": "^5.15.2",
     "@popperjs/core": "^2.11.6",
     "@react-native-async-storage/async-storage": "1.17.10",
+    "@react-native-camera-roll/camera-roll": "^5.2.4",
     "@react-native-clipboard/clipboard": "^1.10.0",
     "@react-native-community/blur": "^4.2.0",
     "@react-native-community/netinfo": "^8.3.0",
