--- a/ios/hackerkid/Info.plist
+++ b/ios/hackerkid/Info.plist
@@ -121,6 +121,12 @@
 		<string>DMSans-Regular.ttf</string>
 		<string>Courgette-Regular.woff</string>
 		<string>Courgette-Regular.woff2</string>
+		<string>DMMono-Italic.ttf</string>
+		<string>DMMono-Light.ttf</string>
+		<string>DMMono-LightItalic.ttf</string>
+		<string>DMMono-Medium.ttf</string>
+		<string>DMMono-MediumItalic.ttf</string>
+		<string>DMMono-Regular.ttf</string>
 	</array>
 </dict>
 </plist>
