splash screen finsihed

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -20,6 +20,8 @@ target 'hackerkid' do
 
   pod 'react-native-webview', :path => '../node_modules/react-native-webview'
 
+  pod 'react-native-splash-screen', :path => '../node_modules/react-native-splash-screen'
+
   target 'hackerkidTests' do
     inherit! :complete
     # Pods for testing
