--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "react-intl": "^5.24.6",
     "react-native": "0.67.2",
     "react-native-animatable": "^1.3.3",
+    "react-native-code-push": "^7.0.1",
     "react-native-collapsible": "^1.6.0",
     "react-native-dropdown-picker": "^5.4.2",
     "react-native-elements": "^3.4.2",
