--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -149,7 +149,7 @@ android {
     compileSdkVersion rootProject.ext.compileSdkVersion
 
     defaultConfig {
-        applicationId "com.hackerkid"
+        applicationId "com.guvi.hackerkid"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
