--- a/ios/hackerkid.xcodeproj/xcshareddata/xcschemes/hackerkid.xcscheme
+++ b/ios/hackerkid.xcodeproj/xcshareddata/xcschemes/hackerkid.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "hackerkid.app"
-               BlueprintName = "hackerkid"
-               ReferencedContainer = "container:hackerkid.xcodeproj">
+               BuildableName = "HackerKID.app"
+               BlueprintName = "HackerKID"
+               ReferencedContainer = "container:HackerKID.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "hackerkidTests.xctest"
-               BlueprintName = "hackerkidTests"
-               ReferencedContainer = "container:hackerkid.xcodeproj">
+               BuildableName = "HackerKIDTests.xctest"
+               BlueprintName = "HackerKIDTests"
+               ReferencedContainer = "container:HackerKID.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "hackerkid.app"
-            BlueprintName = "hackerkid"
-            ReferencedContainer = "container:hackerkid.xcodeproj">
+            BuildableName = "HackerKID.app"
+            BlueprintName = "HackerKID"
+            ReferencedContainer = "container:HackerKID.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "hackerkid.app"
-            BlueprintName = "hackerkid"
-            ReferencedContainer = "container:hackerkid.xcodeproj">
+            BuildableName = "HackerKID.app"
+            BlueprintName = "HackerKID"
+            ReferencedContainer = "container:HackerKID.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
