--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -121,21 +121,21 @@ def jscFlavor = 'org.webkit:android-jsc:+'
 def enableHermes = project.ext.react.get("enableHermes", false);
 
 /* get keystore password from OSX keychain */
-def getPassword(String currentUser, String keyChain) {
-   def stdout = new ByteArrayOutputStream()
-   def stderr = new ByteArrayOutputStream()
-   exec {
-       commandLine 'security', '-q', 'find-generic-password', '-a', currentUser, '-s', keyChain, '-w'
-       standardOutput = stdout
-       errorOutput = stderr
-       ignoreExitValue true
-   }
-   //noinspection GroovyAssignabilityCheck
-      stdout.toString().trim()
-}
+// def getPassword(String currentUser, String keyChain) {
+//    def stdout = new ByteArrayOutputStream()
+//    def stderr = new ByteArrayOutputStream()
+//    exec {
+//        commandLine 'security', '-q', 'find-generic-password', '-a', currentUser, '-s', keyChain, '-w'
+//        standardOutput = stdout
+//        errorOutput = stderr
+//        ignoreExitValue true
+//    }
+//    //noinspection GroovyAssignabilityCheck
+//       stdout.toString().trim()
+// }
 
 // get password
-def pass = getPassword("hackerkidAppKey","android_keystore")
+// def pass = getPassword("hackerkidAppKey","android_keystore")
 
 
 /**
@@ -167,9 +167,9 @@ android {
         release {
             if (project.hasProperty('MYAPP_UPLOAD_STORE_FILE')) {
                 storeFile file(MYAPP_UPLOAD_STORE_FILE)
-                storePassword pass
+                storePassword MYAPP_UPLOAD_STORE_PASSWORD
                 keyAlias MYAPP_UPLOAD_KEY_ALIAS
-                keyPassword pass
+                keyPassword MYAPP_UPLOAD_KEY_PASSWORD
             }
         }
         debug {
